# UAS_Machine_Learning

./: README.md  app.py  pyproject.toml  requirements.txt
code/: UAP_Machine_Learning_LSTM.ipynb  UTS_Machine_Learning_BERT.ipynb
