[project]
name = "UAP_Machine-Learning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MufidatulNabilla", email = "mufidatulnabilla22@gmail.com"},
]
dependencies = ["streamlit>=1.41.1", "tensorflow>=2.18.0", "joblib>=1.4.2", "scikit-learn>=1.6.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
